<resources>
    <string name="app_name">Hitungan Tabungan</string>
    <string name="textAplikasi">Masukan uang yang ingin ditabung dan masukan jumlah target yang diinginkan dan lihat berapa hari kamu dapat menabung untuk mencapai jumlah tabungan yang ditargetkan</string>
    <string name="jumlah_uang_yang_ditabungkan">Jumlah Uang Yang Ditabungkan</string>
    <string name="uangtarget">Uang Yang Ditargetkan</string>
    <string name="reset">Reset</string>
    <string name="hitung">HITUNG</string>
    <string name="hasil">Hasil : Kurang Lebih %1$s Hari</string>
    <string name="invalid_input">Input Tidak Boleh Kosong</string>
    <string name="invalid_nabung">Uang Anda Sudah Mencapai Target Tabungan</string>
    <string name="belum_ada_data">Belum Ada Data</string>
    <string name="histori">histori</string>
    <string name="content_description_favorite">Content Description History</string>
    <string name="page_history">History</string>
    <string name="page_hitung">Hitungan Tabungan</string>
    <string name="textFragmentAbout">%1$s</string>
    <string name="about_application">Tentang Aplikasi</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="titik_dua">:</string>
    <string name="depo_x">%1$s</string>
    <string name="target_x">%1$s</string>
    <string name="hari_x">Kurang Lebih %1$s</string>
    <string name="tanggal_x">12/02/2020</string>
    <string name="tabungan_per_hari_label">Tabungan/hari</string>
    <string name="target_label">Target</string>
    <string name="prediksi_hari_label">Prediksi Hari</string>
    <string name="konfirmasi_hapus">Apakah Anda Yakin Ingin Menghapus Semuanya?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="hapus_histori_all">Hapus Semua Histori</string>
    <string name="share">Bagikan</string>
    <string name="bagikan_template">Uang yang ditabung : Rp. %1$s\nJumlah yang ditargetkan : Rp. %2$s\n%3$s</string>
    <string name="konfirmasi_hapus_item">Apakah Anda Yakin Ingin Menghapus History Ini?</string>

<!--    work bg -->
    <string name="channel_name">Pengingat</string>
    <string name="channel_desc">Pengingat Tabungan</string>
    <string name="notif_title">Periksa Tabungan Anda!</string>
    <string name="notif_text">Tabungan Anda Sudah Mencapai Target..</string>
    <string name="pengingatButton">Tambah Pengingat</string>
    <string name="pengingat_toast">Pengingat DItambahkan</string>
    <string name="koneksi_error">Koneksi Error</string>
</resources>