<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/idTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tanggalTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/tabungan_per_hari_label"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_label"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="@+id/idTextView1"
        app:layout_constraintTop_toBottomOf="@id/idTextView1"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prediksi_hari_label"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tanggalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/tanggal_x"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="italic"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.34" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titik_dua"
        app:layout_constraintTop_toTopOf="@id/idTextView1"
        app:layout_constraintStart_toEndOf="@id/guideline2"/>
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titik_dua"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintStart_toEndOf="@id/guideline2"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titik_dua"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        app:layout_constraintStart_toEndOf="@id/guideline2"/>

    <TextView
        android:id="@+id/depoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        tools:text="@string/depo_x" />

    <TextView
        android:id="@+id/targetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/target_x"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/depoTextView"/>

    <TextView
        android:id="@+id/prediksiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/hari_x"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/targetTextView"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/delete"
        app:tint="@color/white"
        app:backgroundTint="@color/biru_muda"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@null"
        app:rippleColor="@color/white"
        app:fabCustomSize="37dp"
        tools:ignore="PrivateResource" />


</androidx.constraintlayout.widget.ConstraintLayout>